--- a/res/layout/game_by_game.xml
+++ b/res/layout/game_by_game.xml
@@ -13,13 +13,20 @@
         android:layout_height="0dip"
         android:layout_weight="1"
         android:background="@color/Orange"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:paddingTop="15dp" >
+
+        <TextView
+            android:id="@+id/game_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/empty"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <TableRow
             android:id="@+id/sline1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
             android:background="@color/cornsilk"
             android:gravity="center_vertical|center_horizontal"
             android:padding="10dp" >
