--- a/res/layout/game_edit.xml
+++ b/res/layout/game_edit.xml
@@ -345,12 +345,35 @@
             android:orientation="vertical"
             android:padding="15dp" >
 
-            <TextView
-                android:id="@+id/head_fg2"
+            <RadioGroup
+                android:id="@+id/winlosegroup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginBottom="15dp" >
+
+                <RadioButton
+                    android:id="@+id/radio_win"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="@string/win" />
+
+                <RadioButton
+                    android:id="@+id/radio_loss"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/loss" />
+            </RadioGroup>
+
+            <TextView
+                android:id="@+id/head_fg2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/winlosegroup"
+                android:layout_below="@+id/winlosegroup"
+                android:layout_marginBottom="15dp"
                 android:text="@string/pointers_2"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -759,6 +782,15 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/tips_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/btn_default"
+                android:drawableLeft="@drawable/button_game_meta"
+                android:onClick="openTips"
+                android:text="@string/empty" />
 
             <Button
                 android:id="@+id/reset_button"
