going to work so need to push weekend work.. looks pretty clean, promising

--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -41,7 +41,7 @@
             android:background="@color/Orange"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="@string/statline"
+            android:text="@string/game_stats_low"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textSize="14sp" />
     </TableRow>
